test/org/midica/testfiles/failing/meta-with-param.midica
INCLUDE_FILE inc/instruments.midica

META test
	composer	Beethoven
END
